--- a/App/App/App.csproj
+++ b/App/App/App.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RavenDB.Client" Version="5.3.2" />
+  </ItemGroup>
+
 </Project>
